--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-  
-<!-- Mirrored from carlsednaoui.github.io/ouibounce/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 21 Sep 2020 05:58:40 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <title>Ouibounce example page</title>
     <script src="build/ouibounce.min.js"></script>
@@ -84,6 +82,4 @@
       });
     </script>
   </body>
-
-<!-- Mirrored from carlsednaoui.github.io/ouibounce/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 21 Sep 2020 05:58:43 GMT -->
 </html>
