pop up model when load page

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
       </div>
     </div>
 
+<script type="text/javascript">
+    $(window).on('load',function(){
+        $('#ouibounce-modal').modal('show');
+    });
+</script>
     <!-- Example page JS        -->
     <!-- Used to fire the modal -->
     <script>
