--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
       </div>
     </div>
 
-<script type="text/javascript">
-    $(window).on('load',function(){
-        $('#ouibounce-modal').modal('show');
-    });
-</script>
+    
     <!-- Example page JS        -->
     <!-- Used to fire the modal -->
     <script>
@@ -84,6 +80,12 @@
 
       $('#ouibounce-modal .modal').on('click', function(e) {
         e.stopPropagation();
+      });
+
+      // model pop up when refresh/load page
+      $(window).on('load',function(){
+          // $('#ouibounce-modal').modal('show');
+          $('#ouibounce-modal').show();
       });
     </script>
   </body>
